codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__image_placeholder_multiple.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 3281
expression: terminal.backend()
---
"                                                                                                    "
"› [Image #1][Image #2]                                                                              "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                 100% context left  "
