codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__small.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 4305
expression: terminal.backend()
---
"                                                                                                    "
"› short                                                                                             "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                 100% context left  "
